# tantu

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: language-spec.md
examples/: CMakeLists.txt
examples/bufferization/: AddBufferization.cpp  CMakeLists.txt  NegBufferization.cpp
examples/bufferization/test/: CMakeLists.txt  add-alias-lhs.mlir  add-alias-rhs.mlir  add-requires-alloc.mlir  lit.cfg.py  lit.site.cfg.py.in  neg-inplace.mlir  neg-requires-copy.mlir
include/Tantu/: BufferizationRegistrations.h  CMakeLists.txt
include/Tantu/Dialect/: CMakeLists.txt  TantuDialect.h  TantuDialect.td  TantuOps.h  TantuOps.td
include/Tantu/Frontend/: AST.h  Lexer.h  Parser.h  PrettyPrinter.h
include/Tantu/IRGen/: IRGen.h
include/Tantu/Sema/: TypeChecker.h
include/Tantu/Transforms/: Passes.h  Passes.td
lib/Tantu/: CMakeLists.txt
lib/Tantu/Dialect/: CMakeLists.txt  TantuDialect.cpp  TantuOps.cpp
lib/Tantu/Frontend/: AST.cpp  CMakeLists.txt  Lexer.cpp  Parser.cpp  PrettyPrinter.cpp
lib/Tantu/IRGen/: CMakeLists.txt  IRGen.cpp
lib/Tantu/Sema/: CMakeLists.txt  TypeChecker.cpp
lib/Tantu/Transforms/: AttachNVVMTarget.cpp  CMakeLists.txt  FuseElementwise.cpp  FuseElementwise.pdll  LowerTantuPrint.cpp  LowerToLinalg.cpp
test/: .lit_test_times.txt  CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/CodeGen/: lower_to_cpu.mlir
test/Dialect/: add-scalar.mlir  add.mlir  cast.mlir  constant.mlir  div.mlir  div_scalar.mlir  exp.mlir  matmul.mlir  max-reduce.mlir  max-scalar.mlir  max.mlir  mul.mlir  mul_scalar.mlir  neg.mlir  print.mlir  size.mlir  sub-scalar.mlir  sub.mlir  sum.mlir  tensor-literal.mlir  transpose.mlir
test/Frontend/: CMakeLists.txt  LexerTest.cpp  ParserTest.cpp
test/IRGen/: control_flow.tantu  elementwise.tantu  linear_algebra.tantu  reductions.tantu  softmax_relu.tantu
test/Sema/: CMakeLists.txt  TypeCheckerTest.cpp
test/Transforms/: add.mlir  add_scalar.mlir  cast.mlir  constant.mlir  div.mlir  exp.mlir  mul_scalar.mlir  print.mlir  size.mlir  sub.mlir  sub_scalar.mlir  sum.mlir  transpose.mlir
test/Transforms/Bufferization/: add-scalar.mlir  add.mlir  cast.mlir  constant.mlir  div-scalar.mlir  (+16 more)
tools/tantu-compiler/: CMakeLists.txt  main.cpp
tools/tantu-gpu-runner/: CMakeLists.txt  main.cpp
tools/tantu-opt/: CMakeLists.txt  main.cpp
(+10 files in other folders)
